2008-03-03  Naohiro Aota  <nao.aota@gmail.com>

	* doc/emacs-w3m.texi (Inline Images): Updated.

	* doc/emacs-w3m-ja.texi (Inline Images): Ditto.

	* w3m.el (w3m-toggle-inline-images): Only toggle in the region if
	Transient Mark mode.
	(w3m-toggle-inline-image): Ditto.

2008-02-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-arrived-intern): Protect against null string.  It enables
	url completion even for null string.  Suggested by Aota-san.

2008-02-07  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-expand-path-name): New function.
	(w3m-expand-url): Remove useless expanded path-name check.

2008-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp, install-icons, install-icons30): Quote
	directory name that might contain whitespace.

	* doc/Makefile.in (install): Ditto.

	* aclocal.m4 (AC_PATH_LISPDIR): Ditto; always report prefix name.

	* mkinstalldirs: Replace it with the 2006-05-11.19 version.

2008-01-30  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-fontify-anchors): Don't expand icon's url when it is nil.

2008-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-safe-url-regexp): Add note to doc string.
	(w3m-fontify): Hold the value of w3m-safe-url-regexp with the
	w3m-safe-url-regexp text-property.
	(w3m-toggle-inline-image, w3m-toggle-inline-images)
	(w3m-safe-view-this-url, w3m-mouse-safe-view-this-url): Check whether
	url is safe by comparing it with the value of the w3m-safe-url-regexp
	text property; prompt a user to confirm whether to proceed.
	(w3m-safe-toggle-inline-image, w3m-safe-toggle-inline-images): Abolish.
	(w3m-minor-mode-command-alist): Map w3m-toggle-inline-image and
	w3m-toggle-inline-images to themselves.

2008-01-20  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-search-name-anchor): Accept and optional argument
	`no-record'.
	(w3m-goto-url): Going other page's anchor, call
	`w3m-search-name-anchor' with 3rd argument t.

2008-01-16  Naohiro Aota  <nao.aota@gmail.com>
